# Protocol-HSM

./: .gitignore  CMakeLists.txt  HSMP.hpp  README.md  main.cpp
src/: HSMP.hpp  User.hpp  client.cpp  main.cpp  server.cpp
src/HSMP/: HSMPRequest.cpp  HSMPRequest.hpp  HSMPResponse.cpp  HSMPResponse.hpp
src/utils/: base64.cpp  base64.hpp
